--- a/src/components/brandsliders.css
+++ b/src/components/brandsliders.css
@@ -1,7 +1,7 @@
 .slider-container {
   padding: 0 30px;
   width: 100%;
-  background-color: rgba(173, 216, 230, 0.8);
+  background-color: #fff;
   /* background-color: rgba(211, 211, 211, 0.8); */
 }
 .slick-prev:before,
@@ -10,6 +10,17 @@
 }
 .slider-image {
   margin: 0 20px;
+}
+.brand-heading {
+  font-size: 50px;
+  padding: 30px 0;
+  font-weight: bolder;
+  color: #394a62;
+  text-align: center;
+}
+
+.slider-image img {
+  height: 150px;
 }
 
 @media screen and (max-width: 979px) {
