--- a/src/moderncomponents/navbar.css
+++ b/src/moderncomponents/navbar.css
@@ -75,7 +75,7 @@ header {
   border: none;
 }
 .talk:hover {
-  background-color: #33526f;
+  background-color: #394b62;
 }
 
 @media screen and (max-width: 1199px) {
