--- a/src/moderncomponents/footer.css
+++ b/src/moderncomponents/footer.css
@@ -17,15 +17,16 @@ footer {
   font-size: 1.3rem;
   line-height: 1.1em;
   margin: 30px 0;
+  width: 77%;
 }
-/* .footer-signup{
-    width: 30%;
-    margin-left: 30px;
-} */
+.footer-signup{
+    width: 44%;
+}
 .footer-signup p {
   margin-bottom: 20px;
   font-size: 18px;
   line-height: 1.3em;
+  width: 82%;
 }
 .footer-signup label {
   font-weight: 400 !important;
@@ -49,7 +50,7 @@ footer {
 .asterisk {
   color: red;
 }
-.footer-contact-btn,
+.footer-signup button,
 .footer-address button {
   display: block;
   background-color: #ffd166;
@@ -60,17 +61,14 @@ footer {
   margin-top: 10px;
   font-weight: bolder;
 }
-.footer-contact-btn:hover,
+.footer-signup button:hover,
 .footer-address button:hover {
-  background-color: #33526f;
+  background-color: #394b62;
 }
-.footer-contact-btn {
-  width: 180px;
+.footer-signup button{
+   margin-top: 30px;
 }
-.footer-address {
-  margin-left: 24px;
-  width: 50%;
-}
+
 .footer-address p {
   font-size: 18px;
   line-height: 1.3em;
@@ -84,7 +82,7 @@ footer {
   padding: 10px 5px;
 }
 .social-icons-icon:hover {
-  background-color: #33526f;
+  background-color: #394b62;
 }
 .copy-rights {
   text-align: center;
@@ -112,6 +110,10 @@ footer {
   position: absolute;
   left: 9%;
   top: 8%;
+}
+.footer-address p span,.copy-rights p{
+  font-weight: normal;
+  font-size: 18px;
 }
 
 /* Responsive */
