--- a/src/app/blog/page.css
+++ b/src/app/blog/page.css
@@ -4,12 +4,12 @@
 }
 .blog-card {
   background-color: #fff;
-  width: 25.9%;
+  width: 87%;
   border-radius: 5px;
 }
 .blog-image {
-  width: 305px;
-  height: 305px;
+  width: 410px;
+    height: 332px;
   display: block;
   transition: transform 1s ease-out;
 }
@@ -25,6 +25,7 @@
   padding: 100px 0;
   /* background-image: url(../../../public/images/blue-bg.jpg); */
   background-color: #f3f3f2;
+  padding-left: 36px;
 }
 .blog-info {
   padding: 30px 10px;
@@ -43,6 +44,11 @@
 }
 .blog-info a:hover {
   color: #2dd3fa;
+}
+.blogs{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
 }
 
 /* Responsive */
