--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@ body {
   background-image: url(../../public/images/car-public.jpg);
 }
 .car-workplace {
-  background-image: url(../../public/images/car-workplace.jpeg);
+  background-image: url(../../public/Workplace.jpg);
 }
 .car-fleet {
   background-image: url(../../public/images/car-fleet.jpg);
