--- a/src/app/contact/components/form.css
+++ b/src/app/contact/components/form.css
@@ -199,6 +199,20 @@
 .captcha {
   margin-left: 10px;
 }
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  background-color: #04AA6D;;
+  width: 50%;
+  font-size: 20px;
+  color: white;
+}
 
 @media screen and (max-width: 1400px) {
   .electrum-contact .contact-form-container {
@@ -322,3 +336,7 @@
     height: 55px;
   }
 }
+
+
+
+
