--- a/src/app/blog/carbon-credit-aggregation/page.css
+++ b/src/app/blog/carbon-credit-aggregation/page.css
@@ -56,6 +56,6 @@ section {
 /* Responsive */
 @media screen and (max-width: 767px) {
   .container {
-    width: 96%;
+    width: 96% !important;
   }
 }
