--- a/src/app/blog/evcharging101/page.css
+++ b/src/app/blog/evcharging101/page.css
@@ -29,3 +29,12 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+
+/* Responsive */
+
+@media screen and (max-width: 767px) {
+    .container {
+      width: 96% !important;
+    }
+  }
