--- a/src/app/blog/page.css
+++ b/src/app/blog/page.css
@@ -53,7 +53,7 @@
 
 @media screen and (max-width: 1199px) {
   .blog-card {
-    width: 50%;
+    width: 80%;
   }
   .blog-card-image a img {
     width: 100%;
@@ -61,13 +61,14 @@
 }
 
 @media screen and (max-width: 979px) {
-  .blog-card {
-    width: 50%;
-  }
+  
   .blog-card-image a img {
     width: 100%;
     height: auto;
   }
+  .blog-card {
+    width: 80%;
+}
 }
 
 @media screen and (max-width: 767px) {
@@ -80,5 +81,9 @@
   .blog-card-image a img {
     width: 100%;
     height: auto;
+  }
+  .blog-content{
+    display: block;
+    padding: 100px 20px 20px 20px;
   }
 }
