--- a/src/app/home/BannerSlider.css
+++ b/src/app/home/BannerSlider.css
@@ -69,8 +69,9 @@
     font-size: 18px;
   }
   .carousel-caption {
-    width: 80% !important;
+    width: 95% !important;
     left: 0% !important;
+    top: 11%;
   }
   .slider-container {
     padding: 0 25px !important;
