--- a/src/moderncomponents/footer.css
+++ b/src/moderncomponents/footer.css
@@ -19,8 +19,8 @@ footer {
   margin: 30px 0;
   width: 77%;
 }
-.footer-signup{
-    width: 44%;
+.footer-signup {
+  width: 44%;
 }
 .footer-signup p {
   margin-bottom: 20px;
@@ -65,8 +65,8 @@ footer {
 .footer-address button:hover {
   background-color: #394b62;
 }
-.footer-signup button{
-   margin-top: 30px;
+.footer-signup button {
+  margin-top: 30px;
 }
 
 .footer-address p {
@@ -90,7 +90,7 @@ footer {
   font-size: 19px;
   margin-top: 25px;
 }
-.footer-logo-content{
+.footer-logo-content {
   width: 42%;
 }
 .footerlogo {
@@ -114,7 +114,8 @@ footer {
   left: 9%;
   top: 8%;
 }
-.footer-address p span,.copy-rights p{
+.footer-address p span,
+.copy-rights p {
   font-weight: normal;
   font-size: 18px;
 }
@@ -160,5 +161,17 @@ footer {
   .social-icons-icon {
     margin: 10px auto !important;
     margin-right: 10px !important;
+  }
+  .footer-signup,
+  .footer-logo-content,
+  .footer-signup p,
+  .footer-inner-content h2 {
+    width: 100%;
+  }
+  .footer-signup {
+    margin-top: 20px;
+  }
+  .footer-signup button {
+    margin: 10px auto;
   }
 }
