--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -276,14 +276,30 @@ body {
   .car-workplace,
   .car-public,
   .car-fleet {
+    width: 88%;
+    margin-bottom: 0% !important;
+    height: 400px;
+  }
+  .car-workplace{
+    top: 77%;
+    left: 6%;
+  }
+  .car-fleet{
+    top: 73%;
+    left: 6%;
+  }
+  .car-public {
+    top: 80%;
+    left: 6%;
+}
+  .car-multi{
     top: 90%;
-    left: 0;
-    width: 100%;
-    margin-bottom: 90%;
+    left: 6%;
+    height: 350px;
   }
   .page-info-icons {
     display: block;
-    margin-top: 26rem;
+    margin-top: 17rem;
   }
   .page-info-icons .icon-div {
     margin: 0 auto;
@@ -310,9 +326,7 @@ body {
   .public-image {
     margin-top: 20px;
   }
-  .car-public {
-    top: 80%;
-  }
+  
 
   .public-services-info-main-content,
   .fleet-services-info-main-content {
