--- a/src/app/blog/government-incentives/page.css
+++ b/src/app/blog/government-incentives/page.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
 }
 .incentives {
-  padding: 100px 0;
+  padding: 79px  0 50px 0;
 }
 .incentives ul {
   list-style: disc;
@@ -27,6 +27,31 @@
   font-size: 20px;
   font-weight: bold;
 }
+.article{
+  font-size: 22px;
+  padding-left: 10px;
+  color: #000;
+  margin-top: 10px;
+  display: block;
+}
+.incentives-heading{
+  background-color: #e9f5f6;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 26px !important;
+  margin: 20px 0 !important;
+}
+.incentives-blog-image{
+  background-image: url(../../../../public/incentives-blog.jpg);
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+
+
+/* Responsive */
 
 @media screen and (max-width: 767px) {
   .container {
