--- a/src/app/fleet/fleetprojects.css
+++ b/src/app/fleet/fleetprojects.css
@@ -9,7 +9,7 @@
   padding: 20px 0;
 }
 .project-heading {
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 700;
   color: #394a62;
   text-align: center;
@@ -22,6 +22,10 @@
   width: 50%;
   font-size: 22px;
   margin-right: 37px;
+}
+.fleet-left-content h6{
+  font-size: 26px;
+  text-decoration: underline;
 }
 .fleet-left-content ul li {
   list-style-type: square;
