--- a/src/app/blog/government-incentives/page.css
+++ b/src/app/blog/government-incentives/page.css
@@ -10,8 +10,13 @@
 }
 .incentives h4,
 .incentives h2 {
-  font-size: 24px;
+  font-size: 26px;
   margin: 10px 0;
+  font-weight: 700;
+  text-decoration: underline
+}
+.incentives h5{
+  font-size: 20px;
   font-weight: 700;
 }
 .incentives p,
@@ -38,8 +43,9 @@
   background-color: #e9f5f6;
   text-align: center;
   padding: 10px 0;
-  font-size: 26px !important;
+  font-size: 30px !important;
   margin: 20px 0 !important;
+  text-decoration: none !important;
 }
 .incentives-blog-image{
   background-image: url(../../../../public/incentives-blog.jpg);
