--- a/src/app/home/page.css
+++ b/src/app/home/page.css
@@ -347,7 +347,8 @@
   text-align: center;
 }
 .insights h2 {
-  font-size: 42px;
+  font-size: 50px;
+  font-weight: bolder
 }
 .features {
   display: flex;
