--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,8 @@ body {
 
 /* Dropdown All pages CSS */
 
-.page-banner.electrum-banner {
+.page-banner.electrum-banner,
+.technology-banner {
   position: relative;
   background-image: url(../../public/images/blue-bg.jpg);
   width: 100%;
@@ -24,7 +25,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 .featured-img-div {
   background-size: cover;
   background-position-x: center;
@@ -58,6 +58,13 @@ body {
 .car-fleet {
   background-image: url(../../public/fleet-banner.jpg);
 }
+.technology-banner {
+  min-height: 400px;
+}
+
+.technology-content {
+  padding: 50px 0;
+}
 
 .page-banner-text {
   z-index: 2;
@@ -82,11 +89,27 @@ body {
   margin: 0 auto;
   text-align: center;
 }
-.page-banner-text .banner-text p {
+.page-banner-text .banner-text p,
+.technology-banner-text p {
   font-size: 24px;
   font-weight: 300;
   color: #fff;
   margin: 0;
+}
+.laptop-images,.mobile-images{
+  padding: 0 20px;
+}
+.mobile-images img,.laptop-images img{
+  width: 97%;
+}
+
+.technology-heading {
+  font-size: 45px;
+  padding: 30px 0;
+  font-weight: bolder;
+  color: #394a62;
+  text-align: center;
+  /* background-color: #e9f5f6; */
 }
 
 .bottom-cta {
@@ -155,6 +178,9 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.page-info-public-content {
+  margin-bottom: 5%;
+}
 .page-info-icons .icon-div {
   text-align: center;
   padding: 15px;
@@ -162,7 +188,8 @@ body {
 .page-info-icons .icon-div .page-icon-div {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
   height: 100px;
 }
 .page-info-icons .icon-div .page-icon-div img {
@@ -173,7 +200,7 @@ body {
   height: 200px;
 }
 .page-info-icons .icon-div .page-icon-info-div h3 {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 700;
   text-transform: uppercase;
   color: #394a62;
@@ -184,7 +211,6 @@ body {
   margin-top: 20px;
   color: #394a62;
 }
-
 
 .public-services-info,
 .fleet-services-info {
@@ -233,6 +259,7 @@ body {
   .page-banner-text .banner-text {
     width: 47%;
   }
+  
 }
 
 @media screen and (max-width: 979px) {
@@ -280,22 +307,28 @@ body {
     margin-bottom: 0% !important;
     height: 400px;
   }
-  .car-workplace{
+  .car-workplace {
     top: 77%;
     left: 6%;
   }
-  .car-fleet{
+  .car-fleet {
     top: 73%;
     left: 6%;
   }
   .car-public {
     top: 80%;
     left: 6%;
-}
-  .car-multi{
+  }
+  .car-multi {
     top: 90%;
     left: 6%;
     height: 350px;
+  }
+  .technology-banner {
+    min-height: 606px;
+  }
+  .technology-banner-text {
+    padding: 0 10px;
   }
   .page-info-icons {
     display: block;
@@ -326,7 +359,6 @@ body {
   .public-image {
     margin-top: 20px;
   }
-  
 
   .public-services-info-main-content,
   .fleet-services-info-main-content {
