--- a/src/components/brandsliders.css
+++ b/src/components/brandsliders.css
@@ -12,15 +12,18 @@
   margin: 0 20px;
 }
 .brand-heading {
-  font-size: 50px;
+  font-size: 45px;
   padding: 30px 0;
   font-weight: bolder;
   color: #394a62;
   text-align: center;
 }
-
+.slider-main{
+  padding: 50px 0;
+}
 .slider-image img {
   height: 150px;
+  width: 152px;
 }
 
 @media screen and (max-width: 979px) {
