--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -259,6 +259,18 @@ body {
   .page-banner-text .banner-text {
     width: 47%;
   }
+  .workplace-page-icon-heading{
+    font-size: 14px !important;
+  }
+  .page-info-icons{
+    gap: 3px;
+    width: 100%;
+    margin-top: 45%;
+  }
+  .page-info-icons .icon-div{
+    padding: 6px;
+  }
+
   
 }
 
@@ -329,6 +341,9 @@ body {
   }
   .technology-banner-text {
     padding: 0 10px;
+  }
+  .mobile-images,.laptop-images{
+    display: block !important;
   }
   .page-info-icons {
     display: block;
