--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -100,10 +100,10 @@
 .chris-lee-image img {
   margin-top: 30%;
 }
-.about-banner{
+.about-banner {
   padding-top: 79px;
 }
-.quotation-mark{
+.quotation-mark {
   position: absolute;
   right: 0;
   bottom: 32%;
@@ -136,7 +136,6 @@
   .leadership-content {
     margin-left: 36%;
   }
-
 }
 
 @media screen and (max-width: 767px) {
@@ -160,7 +159,7 @@
   .info p {
     font-size: 21px;
   }
-  .mission-heading {
+  .mission-heading,.story-info h2,.leadership-section h2 {
     font-size: 40px;
   }
   .leadership-image {
@@ -180,5 +179,8 @@
   }
   .leadership-inner-content h4 {
     text-align: center;
+  }
+  .about-banner {
+    padding-top: 52px;
   }
 }
