--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,7 @@ body {
 
 /* Dropdown All pages CSS */
 
-.page-banner.electrum-banner,
-.technology-banner {
+.page-banner.electrum-banner{
   position: relative;
   background-image: url(../../public/images/blue-bg.jpg);
   width: 100%;
@@ -58,13 +57,6 @@ body {
 .car-fleet {
   background-image: url(../../public/fleet-banner.jpg);
 }
-.technology-banner {
-  min-height: 400px;
-}
-
-.technology-content {
-  padding: 50px 0;
-}
 
 .page-banner-text {
   z-index: 2;
@@ -89,8 +81,7 @@ body {
   margin: 0 auto;
   text-align: center;
 }
-.page-banner-text .banner-text p,
-.technology-banner-text p {
+.page-banner-text .banner-text p {
   font-size: 24px;
   font-weight: 300;
   color: #fff;
@@ -101,15 +92,6 @@ body {
 }
 .mobile-images img,.laptop-images img{
   width: 97%;
-}
-
-.technology-heading {
-  font-size: 45px;
-  padding: 30px 0;
-  font-weight: bolder;
-  color: #394a62;
-  text-align: center;
-  /* background-color: #e9f5f6; */
 }
 
 .bottom-cta {
@@ -336,12 +318,7 @@ body {
     left: 6%;
     height: 350px;
   }
-  .technology-banner {
-    min-height: 606px;
-  }
-  .technology-banner-text {
-    padding: 0 10px;
-  }
+
   .mobile-images,.laptop-images{
     display: block !important;
   }
