--- a/src/app/blog/government-incentives/page.css
+++ b/src/app/blog/government-incentives/page.css
@@ -63,6 +63,23 @@
   font-style: normal;
   font-weight: 900;
 }
+.incentives-link-content{
+  text-align: center;
+
+}
+.incentives-link{
+  padding: 10px;
+  color: #fff;
+  font-size: 17px;
+  background-color: #ffd166;
+  font-weight: 700;
+  display: inline-block;
+  margin: 20px 0;
+  
+}
+.incentives-link:hover{
+  background-color: #394a62;
+}
 
 
 
